Implemented a spectra reader. Now showing a low resolution spectra after a star is selected.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -517,6 +517,7 @@
     <Compile Include="VideoOperations\LightCurves\ucCorrSelection.Designer.cs">
       <DependentUpon>ucCorrSelection.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\Spectroscopy\SpectraReader.cs" />
     <Compile Include="VideoOperations\Spectroscopy\ucSpectroscopy.cs">
       <SubType>UserControl</SubType>
     </Compile>
