Made it possible to save and open .spectra files with reduced spectroscopy data.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -530,6 +530,7 @@
       <DependentUpon>frmRunMultiFrameSpectroscopy.cs</DependentUpon>
     </Compile>
     <Compile Include="VideoOperations\Spectroscopy\Helpers\SpectraReader.cs" />
+    <Compile Include="VideoOperations\Spectroscopy\SpectraFile.cs" />
     <Compile Include="VideoOperations\Spectroscopy\Tracking\SpectroscopyStarTracker.cs" />
     <Compile Include="VideoOperations\Spectroscopy\ucSpectroscopy.cs">
       <SubType>UserControl</SubType>
