Code hygiene and dealing with a bunch of warnings.

--- a/CSharpFITS/CSharpFITS.csproj
+++ b/CSharpFITS/CSharpFITS.csproj
@@ -50,7 +50,8 @@
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>0</WarningLevel>
+    <NoWarn>1591,1584,1711,1572,1581,1580,1573,1570</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
