--- a/Tangra.Astrometry/Tangra.Astrometry.csproj
+++ b/Tangra.Astrometry/Tangra.Astrometry.csproj
@@ -67,7 +67,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors>
     </WarningsAsErrors>
   </PropertyGroup>
