--- a/Tangra.OccultTools/Tangra.OccultTools.csproj
+++ b/Tangra.OccultTools/Tangra.OccultTools.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE;WIN32</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
