Refactored the configuration of spectroscopic reduction. Now saving a bunch of additional information with the .spectra file. Made the 'optical' panel lines brighter .

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Controller\LightCurveContext.cs" />
     <Compile Include="Controller\LightCurveController.cs" />
     <Compile Include="Controller\DarkFlatFrameController.cs" />
+    <Compile Include="Controller\SpectraReductionContext.cs" />
     <Compile Include="Controller\SpectroscopyController.cs" />
     <Compile Include="Controller\VideoController.cs" />
     <Compile Include="Controller\VideoOperationController.cs" />
