Started working on loading of the spectra reductions for an absolute flux calibration.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -334,13 +334,14 @@
     </Compile>
     <Compile Include="Helpers\LongOperationsManager.cs" />
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\AbsFluxCalibrator.cs" />
+    <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\AbsFluxSpectra.cs" />
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmAbsFlux.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmAbsFlux.Designer.cs">
       <DependentUpon>frmAbsFlux.cs</DependentUpon>
     </Compile>
-    <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\ExportedSpectraUIWrapper.cs" />
+    <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\AbsFluxInputFile.cs" />
     <Compile Include="VideoOperations\Spectroscopy\frmChooseConfiguration.cs">
       <SubType>Form</SubType>
     </Compile>
