Reviewed the stars' STIS data after an issue was identified with the star selection. Rebuild the CalSpec database and related database generation code.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -1219,8 +1219,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="Service References\TangraService\ErrorReports1.wsdl" />
-    <EmbeddedResource Include="VideoOperations\Spectroscopy\AbsFluxCalibration\CalSpec.db" />
     <None Include="VideoOperations\Spectroscopy\AbsFluxCalibration\ReferenceCode\AbsFlux.f90" />
+    <None Include="VideoOperations\Spectroscopy\AbsFluxCalibration\Standards\AbsFlux-TangraStars.csv" />
+    <EmbeddedResource Include="VideoOperations\Spectroscopy\AbsFluxCalibration\Standards\CalSpec.db" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
