Updated the mf library to the latest version.

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ _ReSharper.*
 /OcrTester/AutomatedTestingImages/New
 /Tangra Releases
 /Tangra 3/lib/mathnet-numerics-3.7.0
+/Tangra 3/lib/MFSamples-2015-07
+/Tangra 3/lib/MFLibv3_0
