--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -343,6 +343,12 @@
       <DependentUpon>frmAbsFlux.cs</DependentUpon>
     </Compile>
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\AbsFluxInputFile.cs" />
+    <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmCompleteSpectra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmCompleteSpectra.Designer.cs">
+      <DependentUpon>frmCompleteSpectra.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\Spectroscopy\frmChooseConfiguration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1063,6 +1069,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmAbsFlux.resx">
       <DependentUpon>frmAbsFlux.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmCompleteSpectra.resx">
+      <DependentUpon>frmCompleteSpectra.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\Spectroscopy\frmChooseConfiguration.resx">
       <DependentUpon>frmChooseConfiguration.cs</DependentUpon>
