--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -349,6 +349,12 @@
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmCompleteSpectra.Designer.cs">
       <DependentUpon>frmCompleteSpectra.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmConfigureProcessing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmConfigureProcessing.Designer.cs">
+      <DependentUpon>frmConfigureProcessing.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\Spectroscopy\frmChooseConfiguration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1072,6 +1078,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmCompleteSpectra.resx">
       <DependentUpon>frmCompleteSpectra.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\Spectroscopy\AbsFluxCalibration\frmConfigureProcessing.resx">
+      <DependentUpon>frmConfigureProcessing.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\Spectroscopy\frmChooseConfiguration.resx">
       <DependentUpon>frmChooseConfiguration.cs</DependentUpon>
