First cut of a new FITS frame tracking based on identification of the star like objects in the field and their relative positions.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -333,6 +333,7 @@
       <DependentUpon>frmLongRunningOperation.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\LongOperationsManager.cs" />
+    <Compile Include="VideoOperations\LightCurves\Tracking\StarFieldTracker.cs" />
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\AbsFluxCalibrator.cs" />
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\AbsFluxSpectra.cs" />
     <Compile Include="VideoOperations\Spectroscopy\AbsFluxCalibration\CalSpecDatabase.cs" />
