more experimental work on magnitude fit analysis. Did some FWHM-normalized AbsFlux fitting mode fixes.

--- a/Tools/MagnitudeFitter/MagnitudeFitter.csproj
+++ b/Tools/MagnitudeFitter/MagnitudeFitter.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Engine\Extensions.cs" />
     <Compile Include="Engine\TangraCsvExport.cs" />
     <Compile Include="Engine\TangraExportEntry.cs" />
     <Compile Include="frmMain.cs">
