Ignoring all files under OcrTester/AutomatedTestingImages/New Reports

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ _ReSharper.*
 /Tangra 3/lib/mathnet-numerics-3.7.0
 /Tangra 3/lib/MFSamples-2015-07
 /Tangra 3/lib/MFLibv3_0
+/OcrTester/AutomatedTestingImages/New Reports
