--- a/Tangra.Core/TangraCore_Linux.project
+++ b/Tangra.Core/TangraCore_Linux.project
@@ -114,7 +114,7 @@
       <PostBuild>
         <Command Enabled="yes">ar ruv ./Release/TangraCore.a</Command>
         <Command Enabled="yes">rm -f ../Tangra\ 3/bin/Release/libTangraCore.so</Command>
-        <Command Enabled="yes">cp Release/libTangraCore.so ../Tangra\ 3/bin/Release/</Command>
+        <Command Enabled="yes">cp Release/libTangraCore.so ../Tangra\ 3/bin/Release\ -\ Non\ Windows/</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
